--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
       <h1 class="text-2xl font-bold text-indigo-600">CPA Mastery</h1>
       <nav class="space-x-6">
         <a href="index.html" class="text-gray-700 hover:text-indigo-600 font-medium">Home</a>
-        <a href="how-it-works.html" class="text-gray-700 hover:text-indigo-600 font-medium">How It Works</a>
+        <a href="work2.html" class="text-gray-700 hover:text-indigo-600 font-medium">How It Works</a>
         <a href="signin.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md">Sign In</a>
         <a href="signup.html" class="bg-gray-100 hover:bg-gray-200 text-indigo-600 px-4 py-2 rounded-md">Sign Up</a>
       </nav>
