--- a/signin.html
+++ b/signin.html
@@ -4,47 +4,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In - CPA Pro</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 </head>
-<body class="bg-gray-50 font-sans text-gray-800">
+<body class="bg-gray-100 h-screen flex items-center justify-center">
 
-  <!-- Navbar -->
-  <header class="bg-white shadow sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-indigo-600">CPA Pro</h1>
-      <nav class="space-x-6">
-        <a href="index.html" class="text-gray-700 hover:text-indigo-600 font-medium">Home</a>
-        <a href="how-it-works.html" class="text-gray-700 hover:text-indigo-600 font-medium">How It Works</a>
-        <a href="signin.html" class="text-indigo-600 font-semibold">Sign In</a>
-        <a href="signup.html" class="text-indigo-600 border border-indigo-600 px-4 py-2 rounded hover:bg-indigo-50">Sign Up</a>
-      </nav>
-    </div>
-  </header>
+  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
+    <h2 class="text-2xl font-bold mb-6 text-center">Sign In</h2>
 
-  <!-- Sign In Form -->
-  <section class="flex items-center justify-center h-screen px-4">
-    <div class="bg-white p-8 rounded shadow-md w-full max-w-md">
-      <h2 class="text-3xl font-bold text-indigo-600 mb-6 text-center">Sign In to CPA Pro</h2>
+    <div id="error-msg" class="hidden text-red-500 text-sm mb-4 text-center"></div>
 
-      <form>
-        <div class="mb-4">
-          <label class="block text-sm font-medium mb-1">Email</label>
-          <input type="email" class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
-        </div>
-        <div class="mb-6">
-          <label class="block text-sm font-medium mb-1">Password</label>
-          <input type="password" class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
-        </div>
-        <button type="submit" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-semibold py-2 rounded transition">
-          Sign In
-        </button>
-      </form>
+    <form id="signin-form">
+      <input type="text" id="email" placeholder="Email" class="w-full mb-4 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
+      <input type="password" id="password" placeholder="Password" class="w-full mb-6 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
 
-      <p class="mt-4 text-sm text-center text-gray-500">
-        Don't have an account? <a href="signup.html" class="text-indigo-600 hover:underline">Sign Up</a>
-      </p>
-    </div>
-  </section>
+      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded-md transition duration-300">
+        Sign In
+      </button>
+    </form>
+  </div>
+
+  <script>
+    const form = document.getElementById('signin-form');
+    const errorMsg = document.getElementById('error-msg');
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim();
+
+      if (email === '' || password === '') {
+        errorMsg.textContent = 'Please fill in all input fields.';
+        errorMsg.classList.remove('hidden');
+      } else {
+        errorMsg.classList.add('hidden');
+        // Proceed with sign in logic (e.g., API call)
+        alert('Signing in...');
+      }
+    });
+  </script>
 
 </body>
 </html>
