--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
       <input type="email" id="email" placeholder="Email" class="w-full mb-4 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
       <input type="password" id="password" placeholder="Password" class="w-full mb-6 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
 
-      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded-md transition duration-300">
+      <button href="dashboard.html" type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded-md transition duration-300">
         Sign Up
       </button>
     </form>
