--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
       } else {
         signupErrorMsg.classList.add('hidden');
         // Redirect to dashboard.html
-        window.location.href = "dashboard.html";
+        window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
       }
     });
   </script>
