--- a/signup.html
+++ b/signup.html
@@ -6,46 +6,58 @@
   <title>Sign Up - CPA Pro</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
 </head>
-<body class="bg-gray-100 h-screen flex items-center justify-center">
+<body class="bg-gray-50 font-sans text-gray-900">
 
-  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
-    <h2 class="text-2xl font-bold mb-6 text-center">Create an Account</h2>
+  <!-- Header -->
+  <header class="bg-white shadow-md">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-blue-600">CPA Pro</h1>
+      <nav class="space-x-6 text-gray-700">
+        <a href="index.html" class="hover:text-blue-600 font-medium">Home</a>
+        <a href="how-it-works.html" class="hover:text-blue-600 font-medium">How It Works</a>
+        <a href="signin.html" class="hover:text-blue-600 font-medium">Sign In</a>
+        <a href="signup.html" class="text-blue-600 font-bold">Sign Up</a>
+      </nav>
+    </div>
+  </header>
 
-    <div id="signup-error-msg" class="hidden text-red-500 text-sm mb-4 text-center"></div>
+  <!-- Sign Up Section -->
+  <main class="flex items-center justify-center min-h-screen bg-gray-50">
+    <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-8">
+      <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Create Your CPA Pro Account</h2>
+      
+      <form action="#" method="POST" class="space-y-5">
+        <div>
+          <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Full Name</label>
+          <input type="text" id="name" name="name" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+        </div>
+        <div>
+          <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email Address</label>
+          <input type="email" id="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+        </div>
+        <div>
+          <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
+          <input type="password" id="password" name="password" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+        </div>
+        <a href="https://cpapro.github.io/cpapro/dashboard.html" 
+   class="inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">
+  Sign Up
+</a>
+      </form>
 
-    <form id="signup-form">
-      <input type="text" id="name" placeholder="Full Name" class="w-full mb-4 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
-      <input type="email" id="email" placeholder="Email" class="w-full mb-4 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
-      <input type="password" id="password" placeholder="Password" class="w-full mb-6 px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-400">
+      <p class="mt-4 text-sm text-center text-gray-600">
+        Already have an account? 
+        <a href="signin.html" class="text-blue-600 hover:underline font-medium">Sign In</a>
+      </p>
+    </div>
+  </main>
 
-      <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 px-4 rounded-md transition duration-300">
-        Sign Up
-      </button>
-    </form>
-  </div>
-
- <script>
-  const signupForm = document.getElementById('signup-form');
-  const signupErrorMsg = document.getElementById('signup-error-msg');
-
-  signupForm.addEventListener('submit', function(e) {
-    e.preventDefault();
-
-    const name = document.getElementById('name').value.trim();
-    const email = document.getElementById('email').value.trim();
-    const password = document.getElementById('password').value.trim();
-
-    if (name === '' || email === '' || password === '') {
-      signupErrorMsg.textContent = 'Please fill in all input fields.';
-      signupErrorMsg.classList.remove('hidden');
-    } else {
-      signupErrorMsg.classList.add('hidden');
-      // ✅ Correct redirection to GitHub Pages dashboard
-      window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
-    }
-  });
-</script>
-
+  <!-- Footer -->
+  <footer class="bg-white border-t mt-16">
+    <div class="max-w-7xl mx-auto py-6 px-4 text-center text-gray-500">
+      © 2025 CPA Pro. All rights reserved.
+    </div>
+  </footer>
 
 </body>
 </html>
