--- a/signin.html
+++ b/signin.html
@@ -34,11 +34,13 @@
         <div class="mb-6">
           <label class="block text-sm font-medium mb-1">Password</label>
           <input type="password" class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-indigo-500" required>
-        </div>
-        <a href="https://cpapro.github.io/cpapro/dashboard.html" 
-   class="inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">
-  Sign In
-</a>
+       <div class="mt-4 text-center">
+  <a href="https://cpapro.github.io/cpapro/dashboard.html"
+     class="inline-block px-6 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">
+    Sign In
+  </a>
+</div>
+
       </form>
 
       <p class="mt-4 text-sm text-center text-gray-500">
