--- a/signin.html
+++ b/signin.html
@@ -3,58 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sign In - CPA Empire</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <title>Sign In - CPA Pro</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"/>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-50 font-sans text-gray-900">
 
   <!-- Header -->
-  <header class="bg-white shadow fixed w-full z-10">
+  <header class="bg-white shadow-md">
     <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-blue-600">CPA Empire</h1>
-      <nav class="hidden md:flex space-x-6 text-gray-700">
-        <a href="index.html" class="hover:text-blue-600">Home</a>
-        <a href="how-it-works.html" class="hover:text-blue-600">How It Works</a>
-        <a href="contact.html" class="hover:text-blue-600">Contact</a>
+      <h1 class="text-2xl font-bold text-blue-600">CPA Pro</h1>
+      <nav class="space-x-6 text-gray-700">
+        <a href="index.html" class="hover:text-blue-600 font-medium">Home</a>
+        <a href="how-it-works.html" class="hover:text-blue-600 font-medium">How It Works</a>
+        <a href="signin.html" class="text-blue-600 font-bold">Sign In</a>
+        <a href="signup.html" class="hover:text-blue-600 font-medium">Sign Up</a>
       </nav>
     </div>
   </header>
 
-  <!-- Sign In Form -->
-  <section class="flex items-center justify-center min-h-screen pt-24 bg-gray-100">
-    <div class="bg-white shadow-md rounded-lg p-10 max-w-md w-full">
-      <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Sign In</h2>
-      <form action="#" method="POST" class="space-y-5">
+  <!-- Sign In Section -->
+  <main class="flex items-center justify-center min-h-screen bg-gray-50">
+    <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-8">
+      <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Sign In to CPA Pro</h2>
+      
+      <form id="signInForm" class="space-y-5">
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email Address</label>
-          <input type="email" id="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <input type="email" id="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
         <div>
           <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-          <input type="password" id="password" name="password" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <input type="password" id="password" name="password" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
-        <div class="flex justify-between items-center text-sm">
-          <label class="flex items-center">
-            <input type="checkbox" class="mr-2">
-            Remember me
-          </label>
-          <a href="#" class="text-blue-600 hover:underline">Forgot password?</a>
+        <div>
+          <button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">Sign In</button>
         </div>
-        <button type="submit" class="w-full py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">Sign In</button>
       </form>
-      <p class="text-center text-sm text-gray-600 mt-6">
-        Don't have an account?
-        <a href="signup.html" class="text-blue-600 hover:underline">Sign Up</a>
+
+      <p class="mt-4 text-sm text-center text-gray-600">
+        Don't have an account? 
+        <a href="signup.html" class="text-blue-600 hover:underline font-medium">Sign Up</a>
       </p>
     </div>
-  </section>
+  </main>
 
   <!-- Footer -->
-  <footer class="bg-white border-t mt-12">
+  <footer class="bg-white border-t mt-16">
     <div class="max-w-7xl mx-auto py-6 px-4 text-center text-gray-500">
-      © 2025 CPA Empire. All rights reserved.
+      © 2025 CPA Pro. All rights reserved.
     </div>
   </footer>
 
+  <!-- JavaScript -->
+  <script>
+    document.getElementById("signInForm").addEventListener("submit", function(event) {
+      event.preventDefault();
+      
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      if (email === "" || password === "") {
+        alert("Please fill in all fields.");
+        return;
+      }
+
+      // Simulate successful sign-in
+      window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
+    });
+  </script>
 </body>
 </html>
