--- a/signin.html
+++ b/signin.html
@@ -35,9 +35,13 @@
           <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
           <input type="password" id="password" name="password" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
-        <div>
-          <button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">Sign In</button>
-        </div>
+        <div class="mt-4 text-center">
+  <a href="https://cpapro.github.io/cpapro/dashboard.html"
+     class="inline-block px-6 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">
+    Sign in
+  </a>
+</div>
+
       </form>
 
       <p class="mt-4 text-sm text-center text-gray-600">
@@ -53,23 +57,6 @@
       © 2025 CPA Pro. All rights reserved.
     </div>
   </footer>
-
-  <!-- JavaScript -->
-  <script>
-    document.getElementById("signInForm").addEventListener("submit", function(event) {
-      event.preventDefault();
-      
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value.trim();
-
-      if (email === "" || password === "") {
-        alert("Please fill in all fields.");
-        return;
-      }
-
-      // Simulate successful sign-in
-      window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
-    });
-  </script>
+  
 </body>
 </html>
