--- a/dashboard.html
+++ b/dashboard.html
@@ -17,10 +17,10 @@
       </div>
       <nav class="mt-10 px-6 space-y-4">
         <a href="dashboard.html" class="block text-white hover:text-gray-200 transition duration-300">Dashboard</a>
-        <a href="offers.html" class="block text-white hover:text-gray-200 transition duration-300">Offers</a>
+        <a href="offer.html" class="block text-white hover:text-gray-200 transition duration-300">Offers</a>
         <a href="withdraw.html" class="block text-white hover:text-gray-200 transition duration-300">Withdraw</a>
-        <a href="settings.html" class="block text-white hover:text-gray-200 transition duration-300">Settings</a>
-        <a href="signin.html" class="block text-red-500 mt-6">Sign Out</a>
+        <a href="setting.html" class="block text-white hover:text-gray-200 transition duration-300">Settings</a>
+        <a href="Home.html" class="block text-red-500 mt-6">Sign Out</a>
       </nav>
     </aside>
 
