--- a/offer.html
+++ b/offer.html
@@ -18,11 +18,10 @@
       </div>
       <nav class="mt-10 px-6 space-y-4">
         <a href="dashboard.html" class="block text-gray-700 hover:text-blue-600">Dashboard</a>
-        <a href="offers.html" class="block text-blue-600 font-semibold">Offers</a>
-        <a href="#" class="block text-gray-700 hover:text-blue-600">Leads</a>
-        <a href="#" class="block text-gray-700 hover:text-blue-600">Reports</a>
-        <a href="#" class="block text-gray-700 hover:text-blue-600">Settings</a>
-        <a href="signin.html" class="block text-red-500 mt-6">Sign Out</a>
+        <a href="https://cpapro.github.io/cpapro/offer.html" class="block text-blue-600 font-semibold">Offers</a>
+       
+        <a href="https://cpapro.github.io/cpapro/setting.html" class="block text-gray-700 hover:text-blue-600">Settings</a>
+        <a href="https://cpapro.github.io/cpapro/home.html" class="block text-red-500 mt-6">Sign Out</a>
       </nav>
     </aside>
 
