--- a/offer.html
+++ b/offer.html
@@ -34,11 +34,11 @@
         <!-- Offer 1 -->
         <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
           <div class="p-6">
-            <h3 class="text-2xl font-semibold text-gray-800">Email Submit - Gift Card</h3>
-            <p class="text-gray-600 mt-2">Earn $2.50 per email submit. Perfect for targeting users worldwide with simple tasks.</p>
-            <p class="text-lg text-blue-600 font-semibold mt-4">$2.50 / Lead</p>
-            <p class="text-gray-700 mt-4">Description: Users will be asked to submit their email address in exchange for a chance to win a gift card.</p>
-            <button onclick="openModal('Email Submit - Gift Card', '$2.50 / Lead', 'Active')" class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Start Promoting</button>
+            <h3 class="text-2xl font-semibold text-gray-800">Click and earn</h3>
+            <p class="text-gray-600 mt-2">Earn $0.87 Per Click. Perfect for targeting users in the USA.</p>
+            <p class="text-lg text-blue-600 font-semibold mt-4">$0.87/ Click</p>
+            <p class="text-gray-700 mt-4">Description: If the users click your link, then you will earn $0.87 </p>
+            <button onclick="openModal('Click and earn $0.87/click', 'Active')" class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Start Promoting</button>
           </div>
         </div>
 
