--- a/dashboard.html
+++ b/dashboard.html
@@ -53,16 +53,16 @@
         <div class="bg-white shadow-lg rounded-lg p-6">
           <ul class="space-y-4">
             <li class="flex justify-between text-gray-700">
-              <span class="font-semibold">Email Submit - Gift Card</span>
-              <span class="text-blue-600">$2.50 per lead</span>
+              <span class="font-semibold">Click and earn</span>
+              <span class="text-blue-600">$0.87 CPC</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Mobile App Install</span>
-              <span class="text-blue-600">$1.20 per install</span>
+              <span class="text-blue-600">$1.20 CPA</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Survey Complete</span>
-              <span class="text-blue-600">$1.75 per survey</span>
+              <span class="text-blue-600">$1.75 CPL</span>
             </li>
           </ul>
         </div>
@@ -75,15 +75,15 @@
           <ul class="space-y-4">
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Mobile App Install</span>
-              <span class="text-green-600">Active</span>
+              <span class="text-green-600">Deactivated</span>
             </li>
             <li class="flex justify-between text-gray-700">
-              <span class="font-semibold">Email Submit</span>
+              <span class="font-semibold">Click and earn</span>
               <span class="text-green-600">Active</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Survey Complete</span>
-              <span class="text-green-600">Active</span>
+              <span class="text-green-600">Deactivated</span>
             </li>
           </ul>
         </div>
@@ -95,16 +95,16 @@
         <div class="bg-white shadow-lg rounded-lg p-6">
           <ul class="space-y-4">
             <li class="flex justify-between text-gray-700">
-              <span>New lead received for "Mobile App Install"</span>
-              <span class="text-sm text-gray-500">Apr 24, 2025</span>
+              <span>New click for offer ""Click and earn</span>
+              <span class="text-sm text-gray-500">April 24, 2025</span>
             </li>
             <li class="flex justify-between text-gray-700">
-              <span>Offer "Survey Complete" has been updated</span>
-              <span class="text-sm text-gray-500">Apr 23, 2025</span>
+              <span></span>
+              <span class="text-sm text-gray-500"></span>
             </li>
             <li class="flex justify-between text-gray-700">
-              <span>Campaign "Email Submit" reached target</span>
-              <span class="text-sm text-gray-500">Apr 22, 2025</span>
+              <span></span>
+              <span class="text-sm text-gray-500"></span>
             </li>
           </ul>
         </div>
@@ -116,8 +116,8 @@
         <div class="bg-white shadow-lg rounded-lg p-6">
           <ul class="space-y-4">
             <li class="flex justify-between text-gray-700">
-              <span class="font-semibold">Email Submit - Gift Card</span>
-              <span class="text-blue-600">5,000 views, 3% conversion rate</span>
+              <span class="font-semibold">Click and earn</span>
+              <span class="text-blue-600">453 views, 0.6% conversion rate</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Mobile App Install</span>
