--- a/dashboard.html
+++ b/dashboard.html
@@ -75,7 +75,7 @@
           <ul class="space-y-4">
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Mobile App Install</span>
-              <span class="text-green-600">Deactivated</span>
+              <span class="text-red-600">Deactivated</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Click and earn</span>
@@ -83,7 +83,7 @@
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Survey Complete</span>
-              <span class="text-green-600">Deactivated</span>
+              <span class="text-red-600">Deactivated</span>
             </li>
           </ul>
         </div>
