--- a/dashboard.html
+++ b/dashboard.html
@@ -33,17 +33,17 @@
         <!-- Impression Card -->
         <div class="bg-blue-500 p-6 rounded-lg shadow-lg text-center text-white hover:scale-105 transform transition duration-300">
           <p class="text-gray-200">Impressions</p>
-          <h3 class="text-3xl font-bold mt-2">1,280</h3>
+          <h3 class="text-3xl font-bold mt-2">0</h3>
         </div>
         <!-- Clicks Card -->
         <div class="bg-green-500 p-6 rounded-lg shadow-lg text-center text-white hover:scale-105 transform transition duration-300">
           <p class="text-gray-200">Clicks</p>
-          <h3 class="text-3xl font-bold mt-2">482</h3>
+          <h3 class="text-3xl font-bold mt-2">0</h3>
         </div>
         <!-- Earnings Card -->
         <div class="bg-yellow-500 p-6 rounded-lg shadow-lg text-center text-white hover:scale-105 transform transition duration-300">
           <p class="text-gray-200">Earnings</p>
-          <h3 class="text-3xl font-bold mt-2">$245</h3>
+          <h3 class="text-3xl font-bold mt-2">$0</h3>
         </div>
       </div>
 
@@ -75,15 +75,15 @@
           <ul class="space-y-4">
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Mobile App Install</span>
-              <span class="text-red-600">Deactivated</span>
+              <span class="text-red-600">Deactive</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Click and earn</span>
-              <span class="text-green-600">Active</span>
+              <span class="text-red-600">Deactive</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Survey Complete</span>
-              <span class="text-red-600">Deactivated</span>
+              <span class="text-red-600">Deactive</span>
             </li>
           </ul>
         </div>
@@ -95,8 +95,8 @@
         <div class="bg-white shadow-lg rounded-lg p-6">
           <ul class="space-y-4">
             <li class="flex justify-between text-gray-700">
-              <span>New click for offer ""Click and earn</span>
-              <span class="text-sm text-gray-500">April 24, 2025</span>
+              <span></span>
+              <span class="text-sm text-gray-500"></span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span></span>
