--- a/offer.html
+++ b/offer.html
@@ -39,7 +39,7 @@
             <p class="text-gray-600 mt-2">Earn $0.87 Per Click. Perfect for targeting users in the USA.</p>
             <p class="text-lg text-blue-600 font-semibold mt-4">$0.87/ Click</p>
             <p class="text-gray-700 mt-4">Description: If the users click your link, then you will earn $0.87 </p>
-            <button onclick="openModal('Click and earn $0.87/click', 'Active')" class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Start Promoting</button>
+            <button onclick="openModal('Click and earn $0.87/click', 'Deactive')" class="mt-4 px-6 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Start Promoting</button>
           </div>
         </div>
 
@@ -50,7 +50,7 @@
             <p class="text-gray-600 mt-2">Earn $1.20 per mobile app install. Target mobile traffic and increase your earnings.</p>
             <p class="text-lg text-blue-600 font-semibold mt-4">$1.20 / Lead</p>
             <p class="text-gray-700 mt-4">Description: Promote a mobile app and get paid every time someone installs it through your referral link.</p>
-            <button onclick="openModal('Mobile App Install', '$1.20 / Lead', 'Closed')" class="mt-4 px-6 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition duration-300">Start Promoting</button>
+            <button onclick="openModal('Mobile App Install', '$1.20 / Lead', 'Deactive')" class="mt-4 px-6 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition duration-300">Start Promoting</button>
           </div>
         </div>
 
@@ -61,7 +61,7 @@
             <p class="text-gray-600 mt-2">Complete surveys and earn $1.75 for each successful submission. Easy to promote!</p>
             <p class="text-lg text-blue-600 font-semibold mt-4">$1.75 / Lead</p>
             <p class="text-gray-700 mt-4">Description: Encourage users to complete online surveys and earn rewards based on their submissions.</p>
-            <button onclick="openModal('Survey Complete', '$1.75 / Lead', 'Active')" class="mt-4 px-6 py-2 bg-yellow-600 text-white rounded-lg hover:bg-yellow-700 transition duration-300">Start Promoting</button>
+            <button onclick="openModal('Survey Complete', '$1.75 / Lead', 'Deactive')" class="mt-4 px-6 py-2 bg-yellow-600 text-white rounded-lg hover:bg-yellow-700 transition duration-300">Start Promoting</button>
           </div>
         </div>
       </div>
