--- a/dashboard.html
+++ b/dashboard.html
@@ -79,7 +79,7 @@
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Click and earn</span>
-              <span class="text-red-600">Deactive</span>
+              <span class="text-red-600">Active</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Survey Complete</span>
