--- a/signin.html
+++ b/signin.html
@@ -29,19 +29,17 @@
       <form id="signInForm" class="space-y-5">
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email Address</label>
-          <input type="email" id="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+          <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
         <div>
           <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-          <input type="password" id="password" name="password" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+          <input type="password" id="password" name="password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
         <div class="mt-4 text-center">
-  <a href="https://cpapro.github.io/cpapro/dashboard.html"
-     class="inline-block px-6 py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">
-    Sign in
-  </a>
-</div>
-
+          <button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">
+            Sign In
+          </button>
+        </div>
       </form>
 
       <p class="mt-4 text-sm text-center text-gray-600">
@@ -57,6 +55,24 @@
       © 2025 CPA Pro. All rights reserved.
     </div>
   </footer>
-  
+
+  <!-- Validation & Redirect Script -->
+  <script>
+    document.getElementById("signInForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      if (email === "" || password === "") {
+        alert("Please fill in both email and password.");
+        return;
+      }
+
+      // All fields are filled - redirect
+      window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
+    });
+  </script>
+
 </body>
 </html>
