--- a/signup.html
+++ b/signup.html
@@ -26,23 +26,24 @@
     <div class="w-full max-w-md bg-white shadow-lg rounded-lg p-8">
       <h2 class="text-3xl font-bold text-center text-blue-600 mb-6">Create Your CPA Pro Account</h2>
       
-      <form action="#" method="POST" class="space-y-5">
+      <form id="signUpForm" class="space-y-5">
         <div>
           <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Full Name</label>
-          <input type="text" id="name" name="name" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+          <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
         <div>
           <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email Address</label>
-          <input type="email" id="email" name="email" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+          <input type="email" id="email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
         <div>
           <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-          <input type="password" id="password" name="password" required class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+          <input type="password" id="password" name="password" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"/>
         </div>
-        <a href="https://cpapro.github.io/cpapro/dashboard.html" 
-   class="inline-block px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">
-  Sign Up
-</a>
+        <div class="text-center">
+          <button type="submit" class="w-full py-2 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition duration-300">
+            Sign Up
+          </button>
+        </div>
       </form>
 
       <p class="mt-4 text-sm text-center text-gray-600">
@@ -58,6 +59,25 @@
       © 2025 CPA Pro. All rights reserved.
     </div>
   </footer>
+
+  <!-- JavaScript Validation -->
+  <script>
+    document.getElementById("signUpForm").addEventListener("submit", function(e) {
+      e.preventDefault(); // stop form submission
+      
+      const name = document.getElementById("name").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value.trim();
+
+      if (!name || !email || !password) {
+        alert("⚠️ Please fill in all fields before signing up.");
+        return;
+      }
+
+      // Redirect to dashboard if all fields are filled
+      window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
+    });
+  </script>
 
 </body>
 </html>
