--- a/dashboard.html
+++ b/dashboard.html
@@ -33,17 +33,17 @@
         <!-- Impression Card -->
         <div class="bg-blue-500 p-6 rounded-lg shadow-lg text-center text-white hover:scale-105 transform transition duration-300">
           <p class="text-gray-200">Impressions</p>
-          <h3 class="text-3xl font-bold mt-2">391</h3>
+          <h3 class="text-3xl font-bold mt-2">0</h3>
         </div>
         <!-- Clicks Card -->
         <div class="bg-green-500 p-6 rounded-lg shadow-lg text-center text-white hover:scale-105 transform transition duration-300">
           <p class="text-gray-200">Clicks</p>
-          <h3 class="text-3xl font-bold mt-2">123</h3>
+          <h3 class="text-3xl font-bold mt-2">0</h3>
         </div>
         <!-- Earnings Card -->
         <div class="bg-yellow-500 p-6 rounded-lg shadow-lg text-center text-white hover:scale-105 transform transition duration-300">
           <p class="text-gray-200">Earnings</p>
-          <h3 class="text-3xl font-bold mt-2">$01</h3>
+          <h3 class="text-3xl font-bold mt-2">$0</h3>
         </div>
       </div>
 
@@ -79,7 +79,7 @@
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Click and earn</span>
-              <span class="text-green-600">Active</span>
+              <span class="text-red-600">Deactive</span>
             </li>
             <li class="flex justify-between text-gray-700">
               <span class="font-semibold">Survey Complete</span>
