--- a/setting.html
+++ b/setting.html
@@ -8,9 +8,21 @@
 </head>
 <body class="bg-gray-50 font-sans">
 
-  <!-- Sidebar -->
-  <div class="flex h-screen">
-    <aside class="w-64 bg-blue-600 shadow-md hidden md:block text-white">
+  <!-- Mobile Sidebar Toggle Button -->
+  <div class="md:hidden flex items-center justify-between p-4 bg-blue-600 text-white">
+    <h1 class="text-xl font-bold">CPA Pro</h1>
+    <button onclick="toggleSidebar()" class="focus:outline-none">
+      <!-- Hamburger Icon -->
+      <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+      </svg>
+    </button>
+  </div>
+
+  <div class="flex min-h-screen">
+
+    <!-- Sidebar -->
+    <aside id="sidebar" class="w-64 bg-blue-600 shadow-md text-white fixed md:static inset-y-0 left-0 transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out z-30">
       <div class="p-6 text-center">
         <h1 class="text-2xl font-bold">CPA Pro</h1>
       </div>
@@ -18,40 +30,72 @@
         <a href="dashboard.html" class="block text-white hover:text-gray-200 transition duration-300">Dashboard</a>
         <a href="offers.html" class="block text-white hover:text-gray-200 transition duration-300">Offers</a>
         <a href="withdraw.html" class="block text-white hover:text-gray-200 transition duration-300">Withdraw</a>
-        <a href="settings.html" class="block text-white hover:text-gray-200 transition duration-300 font-bold underline">Settings</a>
-        <a href="signin.html" class="block text-red-500 mt-6">Sign Out</a>
+        <a href="settings.html" class="block font-bold underline text-white">Settings</a>
+        <a href="signin.html" class="block text-red-500 mt-6 hover:text-red-400 transition duration-300">Sign Out</a>
       </nav>
     </aside>
 
     <!-- Main Content -->
-    <div class="flex-1 p-6 md:p-10">
+    <div class="flex-1 p-6 md:p-10 md:ml-0 ml-0">
       <h2 class="text-3xl font-bold text-gray-800 mb-6">Account Settings</h2>
 
-      <div class="bg-white shadow-lg rounded-lg p-6 max-w-3xl">
-    
+      <div class="bg-white shadow-lg rounded-2xl p-8 max-w-3xl">
+        <!-- Success Message -->
+        <div id="successMessage" class="hidden mb-6 text-green-600 text-center font-semibold"></div>
 
-          <!-- Password Update -->
-          <h3 class="text-xl font-semibold text-gray-700 mt-10 mb-4">Change Password</h3>
+        <!-- Password Update Form -->
+        <h3 class="text-xl font-semibold text-gray-700 mb-6">Change Password</h3>
+
+        <div class="space-y-5">
           <div>
             <label class="block text-sm font-medium text-gray-600 mb-1">Current Password</label>
-            <input type="password" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" />
+            <input type="password" id="currentPassword" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" />
           </div>
           <div>
             <label class="block text-sm font-medium text-gray-600 mb-1">New Password</label>
-            <input type="password" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" />
+            <input type="password" id="newPassword" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" />
           </div>
           <div>
             <label class="block text-sm font-medium text-gray-600 mb-1">Confirm New Password</label>
-            <input type="password" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" />
+            <input type="password" id="confirmPassword" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-400" />
           </div>
+        </div>
 
-          <div class="pt-6">
-            <button class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg shadow">Update Settings</button>
-          </div>
-        </form>
+        <div class="pt-8 flex justify-end">
+          <button onclick="updatePassword()" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg shadow transition duration-300">
+            Update Settings
+          </button>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Scripts -->
+  <script>
+    function toggleSidebar() {
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('-translate-x-full');
+    }
+
+    function updatePassword() {
+      const currentPassword = document.getElementById('currentPassword').value;
+      const newPassword = document.getElementById('newPassword').value;
+      const confirmPassword = document.getElementById('confirmPassword').value;
+      const successMessage = document.getElementById('successMessage');
+
+      if (newPassword && confirmPassword && newPassword === confirmPassword) {
+        successMessage.innerText = "Password updated successfully!";
+        successMessage.classList.remove('hidden');
+        successMessage.classList.add('text-green-600');
+        successMessage.classList.remove('text-red-600');
+      } else {
+        successMessage.innerText = "Passwords do not match.";
+        successMessage.classList.remove('hidden');
+        successMessage.classList.remove('text-green-600');
+        successMessage.classList.add('text-red-600');
+      }
+    }
+  </script>
 
 </body>
 </html>
