--- a/withdraw.html
+++ b/withdraw.html
@@ -9,9 +9,20 @@
 </head>
 <body class="bg-gray-100 font-sans">
 
-<div class="flex h-screen">
+<!-- Mobile Top Bar -->
+<div class="md:hidden flex items-center justify-between p-4 bg-blue-600 text-white">
+  <h1 class="text-xl font-bold">CPA Pro</h1>
+  <button onclick="toggleSidebar()" class="focus:outline-none">
+    <!-- Hamburger Icon -->
+    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+    </svg>
+  </button>
+</div>
+
+<div class="flex h-screen relative">
   <!-- Sidebar -->
-  <aside class="w-64 bg-blue-600 shadow-md hidden md:block text-white">
+  <aside id="sidebar" class="w-64 bg-blue-600 shadow-md text-white fixed inset-y-0 left-0 transform -translate-x-full md:translate-x-0 md:static transition-transform duration-300 ease-in-out z-40">
     <div class="p-6 text-center">
       <h1 class="text-2xl font-bold">CPA Pro</h1>
     </div>
@@ -81,7 +92,13 @@
   </div>
 </div>
 
+<!-- Scripts -->
 <script>
+  function toggleSidebar() {
+    const sidebar = document.getElementById('sidebar');
+    sidebar.classList.toggle('-translate-x-full');
+  }
+
   const form = document.getElementById("withdrawalForm");
   const error = document.getElementById("error");
   const tableBody = document.getElementById("historyBody");
