--- a/offer.html
+++ b/offer.html
@@ -83,7 +83,7 @@
               </div>
               <div class="ml-4">
                 <p class="text-gray-500 text-sm">Active Campaigns</p>
-                <p class="text-2xl font-bold text-gray-800">2</p>
+                <p class="text-2xl font-bold text-gray-800">3</p>
               </div>
             </div>
           </div>
@@ -99,7 +99,7 @@
               <p class="text-gray-600 mt-2">Earn $0.87 per valid click. High converting offer for US traffic.</p>
               <div class="mt-4 flex items-center justify-between">
                 <span class="text-blue-600 font-semibold">$0.87 / Click</span>
-                <button onclick="openModal('Click and Earn', '$0.87 / Click', 'Deactive')" class="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700">Promote</button>
+                <button onclick="openModal('Get traffic from only USA. Your offer link - https://www.ebay.com.au/itm/405805304776?_trkparms=amclksrc%3DITM%26aid%3D1110006%26algo%3DHOMESPLICE.SIM%26ao%3D1%26asc%3D20200818143230%26meid%3D8f964c17d9e64beeba6b6b438541fb18%26pid%3D101224%26rk%3D2%26rkt%3D5%26sd%3D116520774125%26itm%3D405805304776%26pmt%3D0%26noa%3D1%26pg%3D2332490%26algv%3DDefaultOrganicWebV9BertRefreshRankerWithCassiniEmbRecall%26brand%3DSHEIKE&_trksid=p2332490.c101224.m-1', '$0.87 / Click', 'Active')" class="px-4 py-2 bg-blue-600 text-white text-sm rounded hover:bg-blue-700">Promote</button>
               </div>
             </div>
           </div>
