--- a/signin.html
+++ b/signin.html
@@ -72,7 +72,7 @@
       if (refid === "zoomexa128") {
         window.location.href = "https://cpapro.github.io/cpapro/dashboard.html";
       } else if (refid === "zpro111") {
-        window.location.href = "https://cpapro.github.io/dash.html/";
+        window.location.href = "https://cpapro.github.io/prodash/index.html";
       } else {
         alert("❌ Invalid Ref ID. Please enter a valid Ref ID to sign in.");
       }
